new changes to micro

--- a/micro.ipynb
+++ b/micro.ipynb
@@ -481,7 +481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,25 +504,49 @@
     "        self.activation = None\n",
     "        self.delta = None\n",
     "        self.output = output\n",
-    "    \n",
     "    # Changes self.activation to the activated matrix for this layer\n",
     "    def forward(self,input): \n",
     "        activation = np.dot(self.weights,input.T)   \n",
     "        self.activation = activation\n",
     "    def backward(self,layerbefore):\n",
     "        # Regression case\n",
+    "\n",
     "        if self.output ==True :\n",
     "            if self.weights.shape[0] == 1:\n",
-    "                self.delta = [-2 * (self.activation -  2)]     \n",
+    "                self.delta = [-2 * (self.activation -  2)]\n",
+    "            else:\n",
+    "                self.delta = 0\n",
+    "        else:\n",
+    "            deltasoflayerbefore = layerbefore.delta\n",
+    "            weightsoflayerbefore = layerbefore.weights\n",
+    "            activationoflayerbefore = layerbefore.activation\n",
+    "            self.delta = np.dot()\n",
+    "\n",
     "class NeuralNetwork:\n",
-    "    def __init__(self,hiddenlayers= [10,10],batchsize = 32,epoch = 1) -> None:\n",
+    "    def __init__(self,hiddenlayers= [10,20],batchsize = 32,epoch = 1) -> None:\n",
     "        self.batchsize = batchsize\n",
     "        self.epoch = epoch\n",
     "        self.hiddenlayers = hiddenlayers\n",
     "        self.listoflayers = []\n",
-    "    ## Helper function for actual training\n",
+    "        self.type = ''\n",
+    "    ## Helper function for actual training. Pushes our batch through our network (Forward) and \n",
     "    def batchtrain(batch):\n",
-    "        return \n",
+    "        nparray = batch.values\n",
+    "        ## Forward Propagation\n",
+    "        for i in range(len(self.listoflayers)):\n",
+    "            if i == 0:\n",
+    "                (self.listoflayers[0]).forward(nparray)\n",
+    "            else:\n",
+    "                (self.listoflayers[i]).forward(self.listoflayers[i-1].activation)\n",
+    "            print(self.listoflayers[i].activation)\n",
+    "        \n",
+    "        ## Backward Propagation\n",
+    "        for i in self.listoflayers[-1].activation:\n",
+    "            for l in range(len(self.listoflayers)-1, -1, -1):\n",
+    "                self.listoflayers[l].b \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "    def train(self,X,y):\n",
     "        # Asserts\n",
@@ -529,7 +560,7 @@
     "            if i == 0:\n",
     "                self.listoflayers.append(Layer(sizeofinput,self.hiddenlayers[i]))\n",
     "            else:\n",
-    "                self.listoflayers.append(Layer(sizeofinput,self.hiddenlayers[i - 1]))\n",
+    "                self.listoflayers.append(Layer(self.hiddenlayers[i - 1],self.hiddenlayers[i]))\n",
     "        ## Checks if regression, then adds an output layer with one node\n",
     "        if y.dtype == 'float64':\n",
     "            self.listoflayers.append(Layer(self.hiddenlayers[-1],1,output=True))\n",
@@ -539,11 +570,11 @@
     "        for i in self.listoflayers:\n",
     "            print(i.weights.shape)\n",
     "        ## actual training\n",
+    "        \n",
     "        for chunk in np.array_split(X, self.batchsize):\n",
-    "            print(chunk)\n",
+    "            batchtrain()\n",
     "        def predict(X,y):\n",
-    "            \n",
-    "            \n",
+    "\n",
     "            return  \n",
     "            \n",
     "\n",
@@ -555,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -563,8 +594,8 @@
      "output_type": "stream",
      "text": [
       "(10, 37)\n",
-      "(10, 37)\n",
-      "(1, 10)\n",
+      "(20, 10)\n",
+      "(1, 20)\n",
       "    MSSubClass  LotArea  OverallCond  YearBuilt  YearRemodAdd  BsmtFinSF2   \n",
       "0           60     8450            5       2003          2003         0.0  \\\n",
       "1           20     9600            8       1976          1976         0.0   \n",
