added backprop to classification

--- a/try2.ipynb
+++ b/try2.ipynb
@@ -137,14 +137,20 @@
    "outputs": [],
    "source": [
     "def relu(x):\n",
+    "\n",
     "    return np.where(x > 0, x, 0)\n",
     "def drelu(x):\n",
-    "    return np.where(x > 0, 1,0)\n"
+    "    return np.where(x > 0, 1,0)\n",
+    "def mse(t,p):\n",
+    "    \"\"\"\n",
+    "    Returns mean sqaured error given two arrays of the same length\n",
+    "    \"\"\"\n",
+    "    return sum((t - p) ** 2 for t, p in zip(t, p)) / len(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,21 +183,30 @@
     "        ## Input is supposed to be the training matrix\n",
     "        input = input.T\n",
     "        for b, w in zip(self.biases, self.weights):\n",
-    "            print(input.shape)\n",
     "            dot = np.dot(w, input)+b\n",
-    "            \n",
-    "            input = relu(np.dot(w, input)+b)\n",
+    "            if np.array_equal(self.biases[len(self.biases) - 1] ,b):\n",
+    "                print('test')\n",
+    "                if self.type == 'regression':\n",
+    "                    input = dot\n",
+    "                elif self.type == 'classification':\n",
+    "                    newdot = np.exp(dot.T)\n",
+    "                    row_sums = np.sum(newdot, axis=1, keepdims=True)\n",
+    "                    input = newdot / row_sums\n",
+    "            else:\n",
+    "                input = relu(dot)\n",
     "        # input is now the output activation\n",
     "        # If the type is regression, then the length of the output activation should be 1. \n",
     "        if self.type == 'regression':\n",
-    "            loss = ((answers - input) **2)/len(input)\n",
+    "            loss = mse(input,answers)\n",
     "        elif self.type == 'classification':\n",
-    "            input = input.T\n",
+    "            ## Accuracy instead of loss \n",
     "            currentsum = 0\n",
-    "            for row,index in zip(input,)\n",
-    "                \n",
-    "            return\n",
-    "        return  \n",
+    "            for row,index in zip(input,answers):\n",
+    "                if np.argmax(row) == index:\n",
+    "                    currentsum += 1\n",
+    "            loss = currentsum/len(answers)\n",
+    "            print(loss)\n",
+    "        return  loss\n",
     "    \n",
     "    # Returns a tuple of dw,db, which are layer by layer arrays that represent partials\n",
     "    def backprop(self,inputx,inputy):\n",
@@ -201,27 +216,40 @@
     "        storedsums = []\n",
     "        storedactivations = [inputx]\n",
     "        \n",
-    "\n",
     "        # Forward propagation, storing the su\n",
     "        for b, w in zip(self.biases, self.weights):\n",
-    "            z = np.dot(w, activation)+b\n",
-    "            storedsums.append(z)\n",
-    "            activation = relu(z)\n",
-    "            storedactivations.append(activation)\n",
-    "\n",
+    "            dot = np.dot(w, input)+b\n",
+    "            storedsums.append(dot)\n",
+    "            ## If we are on the last iteration, then our activation function is linear if its regression, or softmax if its classification\n",
+    "            if np.array_equal(self.biases[len(self.biases) - 1] ,b):\n",
+    "                if self.type == 'regression':\n",
+    "                    input = dot\n",
+    "                elif self.type == 'classification':\n",
+    "                    newdot = np.exp(dot.T)\n",
+    "                    row_sums = np.sum(newdot, axis=1, keepdims=True)\n",
+    "                    input = newdot / row_sums\n",
+    "            else:\n",
+    "                input = relu(input)\n",
+    "            storedactivations.append(input)\n",
     "        ## Actual backpropagation\n",
     "        #First Layer\n",
     "        ## Regression case. Thus, the activation for our output for our output layer is linear. Our loss function is mean square error, thus delta (dL/dz) is -2(y-z).\n",
     "        if self.type == 'regression':\n",
-    "            dz = -2 * (y - activation[-1]).reshape(1,1)\n",
+    "            dz = -2 * (y - storedactivations[-1]).reshape(1,1)\n",
     "            assert dz.shape == partialb[-1].shape\n",
+    "            partialb[-1] = dz \n",
     "            dw = np.dot(dz, storedactivations[-2].T)\n",
     "            assert dw.shape == partialw[-1].shape\n",
     "            partialw[-1]= dw\n",
+    "        ## Classification case. Delta of the output layer is dependent on the output layer. Credit to https://towardsdatascience.com/derivative-of-the-softmax-function-and-the-categorical-cross-entropy-loss-ffceefc081d1 for doing the dirty work\n",
     "        elif self.type == 'classification':\n",
-    "            print('test')\n",
-    "\n",
-    "\n",
+    "            dz = storedactivations[-1]\n",
+    "            dz[inputy] = dz[inputy] - 1\n",
+    "            assert dz.shape == partialb[-1].shape\n",
+    "            partialb[-1] = dz\n",
+    "            dw = np.dot(dz, storedactivations[-2].T)\n",
+    "            assert dw.shape == partialw[-1].shape\n",
+    "            partialw[-1]= dw\n",
     "        # Finding partials for the rest of the layers\n",
     "        for i in range(2,len(self.sizes)): \n",
     "            dz = drelu(storedsums[-i])\n",
@@ -247,20 +275,25 @@
     "        for i in range(len(currentsumb)):\n",
     "            self.weights[i] = self.weights[i] - (learningrate/len(batchy)) * currentsumw[i]\n",
     "            self.weights[i] = self.biases[i] - (learningrate/len(batchy)) * currentsumb[i]\n",
+    "    \n",
+    "\n",
     "            \n",
-    "    def train(self,X,Y,batchsize = 32,epoch = 5):\n",
+    "    def train(self,X,Y,batchsize = 32,epoch = 5,testx = None,testy = None):\n",
     "        assert isinstance(X, pd.DataFrame) \n",
     "        assert isinstance(Y,pd.Series)\n",
     "        self.construct(X,Y)\n",
-    "        \n",
     "        Y = pd.factorize(Y)[0]\n",
-    "        self.forward(X,Y)\n",
+    "        trainingloss = [self.forward(X,Y)]\n",
+    "        if testx and testy:\n",
+    "            testloss = [self.forward(testx,testy)]\n",
     "        minibatchesX = np.array_split(X, len(X) // batchsize)\n",
     "        minibatchesY = np.array_split(Y, len(Y) // batchsize)\n",
     "        #split dataframe into batches of size batchsize\n",
     "        for i in range(epoch):\n",
     "            for x,y in zip(minibatchesX,minibatchesY):\n",
-    "                print('test')\n"
+    "                self.updatebatch(x,y)\n",
+    "        \n",
+    "                \n"
    ]
   },
   {
@@ -272,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,117 +320,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 10, 20, 2]\n",
-      "(2, 100)\n",
-      "(10, 100)\n",
-      "(20, 100)\n",
-      "[6.83053443 1.30872693]\n",
-      "[41.50068278 10.16084596]\n",
-      "[11.01733029  4.73667753]\n",
-      "[7.10791862 1.44725316]\n",
-      "[16.35469071  3.84433628]\n",
-      "[7.44300468 1.51741639]\n",
-      "[3.51523865 0.        ]\n",
-      "[17.92494857  7.30904948]\n",
-      "[27.20288569  9.11834385]\n",
-      "[48.43873059 12.43484923]\n",
-      "[16.56910051  3.14813534]\n",
-      "[11.96817595  5.12922416]\n",
-      "[10.23170785  3.87202336]\n",
-      "[8.85195705 2.34852841]\n",
-      "[51.25356229 12.84857902]\n",
-      "[10.64794132  4.53724656]\n",
-      "[28.49869247  8.50054641]\n",
-      "[22.6529093   9.00649723]\n",
-      "[8.42866244 3.9435803 ]\n",
-      "[9.18283725 4.01589708]\n",
-      "[22.1614716   8.82033009]\n",
-      "[31.58556289  6.73450357]\n",
-      "[4.18297552 0.        ]\n",
-      "[8.81656435 2.33061432]\n",
-      "[27.19330726  5.72408964]\n",
-      "[13.04026917  2.81894411]\n",
-      "[27.71013921  7.42413755]\n",
-      "[18.27654894  4.24495194]\n",
-      "[29.21679484  7.64066494]\n",
-      "[11.68134881  5.01677843]\n",
-      "[23.88929569  9.36426039]\n",
-      "[25.97567002  8.34761495]\n",
-      "[44.66873432 11.00088506]\n",
-      "[8.66052851 3.86755067]\n",
-      "[7.634255   2.64078046]\n",
-      "[12.66356946  5.29607106]\n",
-      "[26.93886128  9.39795475]\n",
-      "[37.05709667  8.59644591]\n",
-      "[13.55243714  5.72975031]\n",
-      "[23.12772325  9.11569939]\n",
-      "[24.66064062  5.15814937]\n",
-      "[3.97591647 0.        ]\n",
-      "[4.72628383 1.55718532]\n",
-      "[6.68340788 3.48608002]\n",
-      "[26.50476766  5.33678142]\n",
-      "[14.4402602  6.0609941]\n",
-      "[46.93615057 12.01789566]\n",
-      "[26.05991701  5.34053066]\n",
-      "[50.780342   13.56263518]\n",
-      "[22.59876607  8.93024523]\n",
-      "[33.53976664  7.24211339]\n",
-      "[21.77378644  4.31933861]\n",
-      "[46.14460118 11.46551049]\n",
-      "[17.8895168   3.63848187]\n",
-      "[29.64145375  6.5268896 ]\n",
-      "[17.88316611  7.30157298]\n",
-      "[27.21836518 10.58828646]\n",
-      "[14.52160012  6.09266424]\n",
-      "[9.44993651 3.30509488]\n",
-      "[10.07322348  3.42502982]\n",
-      "[49.73580795 13.96976539]\n",
-      "[11.75926176  4.90717325]\n",
-      "[9.31247076 2.71045499]\n",
-      "[13.21434293  4.87747149]\n",
-      "[47.5525063  12.37877268]\n",
-      "[5.23318201 0.3903619 ]\n",
-      "[3.92509141 0.        ]\n",
-      "[15.26139761  3.66298503]\n",
-      "[27.02353242  9.20720589]\n",
-      "[44.24292751 10.69251446]\n",
-      "[18.93894647  3.59000415]\n",
-      "[25.92694999  5.17711703]\n",
-      "[24.25867278  9.45632704]\n",
-      "[5.6039101  0.56029859]\n",
-      "[22.83095931  4.5325056 ]\n",
-      "[22.54012856  8.95093818]\n",
-      "[14.95556665  6.23021129]\n",
-      "[24.72182349  9.61989353]\n",
-      "[50.21645281 13.18612858]\n",
-      "[2.17001328 0.        ]\n",
-      "[30.05636346  9.88402781]\n",
-      "[10.92605922  4.38141359]\n",
-      "[6.45787693 1.14034614]\n",
-      "[10.47842179  4.49177113]\n",
-      "[52.70362869 14.09048901]\n",
-      "[17.12856079  7.06481288]\n",
-      "[22.95592005  9.05642271]\n",
-      "[35.3332601   7.75498362]\n",
-      "[9.16917915 2.23699597]\n",
-      "[36.75899265  8.21649911]\n",
-      "[4.46838224 0.        ]\n",
-      "[33.70889106  7.28850576]\n",
-      "[22.04924842  8.79418555]\n",
-      "[9.02929885 3.17092384]\n",
-      "[28.9961236   8.27355108]\n",
-      "[32.2126213   7.03740721]\n",
-      "[6.70754215 1.31081976]\n",
-      "[23.02483578  9.05350077]\n",
-      "[28.19470368 10.64027492]\n",
-      "[14.11057259  5.82866645]\n",
+      "test\n",
+      "0.5\n",
       "test\n",
       "test\n",
       "test\n",
