--- a/try2.ipynb
+++ b/try2.ipynb
@@ -2,32 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'OneHotEncoder' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m s \u001b[39m=\u001b[39m (new_dataset\u001b[39m.\u001b[39mdtypes \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mobject\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m object_cols \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(s[s]\u001b[39m.\u001b[39mindex)\n\u001b[1;32m---> 13\u001b[0m OH_encoder \u001b[39m=\u001b[39m OneHotEncoder(sparse_output\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m     14\u001b[0m OH_cols \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(OH_encoder\u001b[39m.\u001b[39mfit_transform(new_dataset[object_cols]))\n\u001b[0;32m     15\u001b[0m OH_cols\u001b[39m.\u001b[39mindex \u001b[39m=\u001b[39m new_dataset\u001b[39m.\u001b[39mindex\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'OneHotEncoder' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = pd.read_csv('house.csv')\n",
     "dataset.drop(['Id'],\n",
@@ -80,51 +69,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.866984</td>\n",
+       "      <td>0.004605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.113226</td>\n",
+       "      <td>-0.553740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.643369</td>\n",
+       "      <td>-0.561538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.731905</td>\n",
+       "      <td>-0.360165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.069752</td>\n",
+       "      <td>1.010440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>0.621144</td>\n",
+       "      <td>-0.406344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>-0.640603</td>\n",
+       "      <td>0.675796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0.047312</td>\n",
+       "      <td>0.879076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>1.178699</td>\n",
+       "      <td>-0.652375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>1.355684</td>\n",
+       "      <td>-0.500851</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2"
+       "           0         1\n",
+       "0   1.866984  0.004605\n",
+       "1   1.113226 -0.553740\n",
+       "2   0.643369 -0.561538\n",
+       "3   1.731905 -0.360165\n",
+       "4  -0.069752  1.010440\n",
+       "..       ...       ...\n",
+       "95  0.621144 -0.406344\n",
+       "96 -0.640603  0.675796\n",
+       "97  0.047312  0.879076\n",
+       "98  1.178699 -0.652375\n",
+       "99  1.355684 -0.500851\n",
+       "\n",
+       "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "trainx"
+   ]
   },
   {
    "cell_type": "code",
@@ -293,7 +351,24 @@
     "        for i in range(epoch):\n",
     "            for x,y in zip(minibatchesX,minibatchesY):\n",
     "                self.updatebatch(x,y)\n",
-    "            print(self.forward(X,Y))\n",
+    "            \n",
+    "            if self.type == 'classification':\n",
+    "                print('Your training accuracy after epoch ' + str(i) + ' is ' + str(self.forward(X,Y)))\n",
+    "                if testx and testy:\n",
+    "                    print('Your test accuracy after epoch ' + str(i) + ' is ' + str(self.forward(testx,testy)))\n",
+    "            elif self.type == 'regression':\n",
+    "                print('Your training error after epoch ' + str(i) + ' is ' + str(self.forward(X,Y)))\n",
+    "                if testx and testy:\n",
+    "                    print('Your test error after epoch ' + str(i) + ' is ' + str(self.forward(testx,testy)))\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "                \n",
+    "\n",
+    "\n",
+    "            \n",
     "            \n",
     "        \n",
     "                \n"
@@ -304,7 +379,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "train_X\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -386,7 +465,7 @@
    ],
    "source": [
     "nn = NeuralNetwork([30,20,30] )\n",
-    "nn.train(trainx,trainy)\n",
+    "nn.train(train_X,train_y)\n",
     "\n"
    ]
   },
